[package]
name = "ascent_compile"
version = "0.5.0"
edition = "2021"
authors = ["Arash Sahebolamri"]
repository = "https://github.com/s-arash/ascent"
license = "MIT"
description = "implementation of ascent macros"

[dependencies]
syn = { version = "1.0.109", features = ["derive", "full", "extra-traits", "visit-mut"] }
quote = "1.0"
ascent_base = { version = "=0.5.0", path = "../ascent_base" }
proc-macro2 = "1.0"
itertools = "0.12.0"
petgraph = "0.6.0"
derive-syn-parse = "0.1.5"
lazy_static = "1.4.0"
duplicate = "0.4"

[dev-dependencies]
ascent = { path = "../ascent" }
rayon = "1.5"
crossbeam = "0.8"
